# pyhumanshape

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  demo.py  requirements.txt
data/HumanShape/caesar-norm-nh/: README.txt  evalues.mat  evectors.mat  meanShape.mat
sample/: camera.py  poseParamsBounds.py  projection.py  readModel.py  renderer.py
src/: humanshape.cpp
